vue/src/assets/styles/index.css
div.tool-card__card {
	display: flex;
	flex-direction: column;
}

.tool-card__card.v-card {
	background-color: var( --lt-color-white );
	border-bottom: 1px solid var( --v-base80-base );
	box-shadow: none;
}

.tool-card__card > div {
	flex: 1 1 auto;
}

.tool-card__card .v-toolbar__content {
	padding: 0 !important;
}

.tool-card__card .v-card__title {
	flex: 0 0 auto;
	word-break: break-word;
}

.tool-card__card .v-card__actions {
	flex: 0 0 auto;
	flex-direction: column;
}

.tool-card__card .v-card__actions a {
	margin-top: 0.25em;
}

.tool-card__desc {
	-webkit-line-clamp: 3;
}

.tool-card__title {
	-webkit-line-clamp: 2;
}

.tool-card__authors {
	position: absolute;
	bottom: 0;
}

.tool-card__authors dd {
	-webkit-line-clamp: 1;
}

.tool-info__authors dd .v-btn {
	text-transform: none !important;
	font-size: inherit !important;
	letter-spacing: inherit;
}

.lists .box-header {
	background-color: var( --v-accent-base );
	border-bottom: 1px solid var( --v-base80-base );
}

.list-app-bar .v-toolbar__content {
	padding: 0 !important;
}

div.list-card__card {
	display: flex;
	flex-direction: column;
}

.list-card__card > div {
	flex: 1 1 auto;
}

.list-card__card .v-card__title {
	flex: 0 0 auto;
	word-break: break-word;
}

.list-action .v-btn:not( .v-btn--round ).v-size--default {
	min-width: 0;
	padding: 10px 10px 10px 0;
}

.list-card__title {
	-webkit-line-clamp: 2;
}

.list-card__desc {
	-webkit-line-clamp: 3;
}

.list-card__authors dd {
	-webkit-line-clamp: 1;
}

.line-clamp {
	display: block;
	display: -webkit-box;
	-webkit-box-orient: vertical;
	overflow: hidden;
	text-overflow: ellipsis;
}

.featured-lists .box-header {
	background-color: var( --v-accent-base );
	border-bottom: 1px solid var( --v-base80-base );
}

.featured-lists .v-sheet.v-card {
	box-shadow: none;
	border-bottom: 1px solid var( --v-base80-base );
}

.table-striped tbody tr:nth-of-type( odd ) {
	background-color: var( --v-accent-base );
}

.table-crawler-history .v-data-table {
	cursor: pointer;
}

.table-crawler-history tr.v-data-table__selected {
	background: var( --v-primary-base ) !important;
	color: var( --v-base100-base );
}

.selectlocale-body {
	max-height: 250px;
}

.locale-select.v-dialog {
	position: absolute;
	top: 0;
	right: 0;
}

#notifications {
	/* z-index just below the level of our static footer */
	z-index: 2;
	position: fixed;
	bottom: 0%;
}

.searchbar.v-text-field.v-text-field--solo:not( .v-text-field--solo-flat ) > .v-input__control > .v-input__slot {
	border: 1px solid var( --v-base80-base );
}

@media only screen and ( min-width: 960px ) {
	.v-application--is-ltr #notifications {
		margin-left: 28px;
		left: 50%;
		transform: translateX( -50% );
	}

	.v-application--is-rtl #notifications {
		margin-right: 28px;
		right: 50%;
		transform: translateX( 50% );
	}
}

#notifications .v-alert {
	border: thin solid currentcolor !important;
	overflow-wrap: anywhere !important;
}

div.v-slide-group.compact-arrows > .v-slide-group__next,
div.v-slide-group.compact-arrows > .v-slide-group__prev {
	min-width: auto;
}

.v-tabs:not( .v-tabs--vertical ):not( .v-tabs--right ) > .v-slide-group--is-overflowing.v-tabs-bar--is-mobile:not( .v-slide-group--has-affixes ) .v-slide-group__prev {
	display: none !important;
}

.app-client-id,
.app-client-secret {
	word-break: break-all;
}

.tool-links.v-list-item {
	min-height: 25px;
}

.pre-logs {
	font-size: 0.8em;
	max-height: 10em;
	overflow-y: auto;
	white-space: pre-line;
	word-break: break-word;
}

.tool-app-bar .v-toolbar__content {
	padding: 0 !important;
	flex-wrap: wrap;
	justify-content: flex-end;
}

.tool-app-bar.tool-app-bar-xs .v-toolbar__content {
	justify-content: flex-start;
}

.v-chip--disabled.opacity-1 {
	opacity: 1;
}

.rev-suppressed .rev-timestamp,
.rev-suppressed .rev-title,
.rev-suppressed .rev-user,
.rev-suppressed .rev-user-talk,
.rev-suppressed .rev-comment {
	text-decoration: line-through;
	color: rgba( 0, 0, 0, 0.38 );
}

.v-application--is-ltr .log-event dd {
	margin-right: 4px !important;
}

.v-application--is-rtl .log-event dd {
	margin-left: 4px !important;
}

.span-comma-list span:after {
	content: ', ';
}

.span-comma-list span:last-child:after {
	content: '';
}

.diff-path dt {
	font-size: smaller;
	font-weight: bold;
}

.diff-value .v-alert__content {
	overflow-wrap: anywhere !important;
}

.autocomplete dl {
	flex-wrap: nowrap;
}

.autocomplete .desc {
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}

.autocomplete-menu__content {
	max-width: 65% !important;
}

